--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=ec0ee472f614e8d287ab1bec2b3761e5
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://antoine:Tahmdf25@127.0.0.1:3306/tpNote?serverVersion=mariadb-10.3.28"
+DATABASE_URL="mysql://antoine:password@127.0.0.1:3306/tpNote?serverVersion=mariadb-10.3.28"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
